syntax = "proto3";

package iam;

import "google/api/annotations.proto";

option go_package = "github.com/tvttt/iam-services/pkg/proto;proto";

// IAM Service - Quản lý xác thực và phân quyền
service IAMService {
  // Authentication - Xác thực
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/refresh"
      body: "*"
    };
  }

  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/v1/auth/logout"
      body: "*"
    };
  }

  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/verify"
      body: "*"
    };
  }
  
  // Authorization - Phân quyền
  rpc AssignRole(AssignRoleRequest) returns (AssignRoleResponse) {
    option (google.api.http) = {
      post: "/v1/roles/assign"
      body: "*"
    };
  }

  rpc RemoveRole(RemoveRoleRequest) returns (RemoveRoleResponse) {
    option (google.api.http) = {
      post: "/v1/roles/remove"
      body: "*"
    };
  }

  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/roles"
    };
  }

  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse) {
    option (google.api.http) = {
      post: "/v1/permissions/check"
      body: "*"
    };
  }
  
  // Role Management - Quản lý vai trò
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {
    option (google.api.http) = {
      post: "/v1/roles"
      body: "*"
    };
  }

  rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse) {
    option (google.api.http) = {
      put: "/v1/roles/{role_id}"
      body: "*"
    };
  }

  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse) {
    option (google.api.http) = {
      delete: "/v1/roles/{role_id}"
    };
  }

  rpc GetRole(GetRoleRequest) returns (GetRoleResponse) {
    option (google.api.http) = {
      get: "/v1/roles/{role_id}"
    };
  }

  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse) {
    option (google.api.http) = {
      get: "/v1/roles"
    };
  }
  
  // Permission Management - Quản lý quyền
  rpc CreatePermission(CreatePermissionRequest) returns (CreatePermissionResponse) {
    option (google.api.http) = {
      post: "/v1/permissions"
      body: "*"
    };
  }

  rpc DeletePermission(DeletePermissionRequest) returns (DeletePermissionResponse) {
    option (google.api.http) = {
      delete: "/v1/permissions/{permission_id}"
    };
  }

  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse) {
    option (google.api.http) = {
      get: "/v1/permissions"
    };
  }
  
  // Casbin Authorization - Phân quyền theo Casbin RBAC
  rpc CheckAPIAccess(CheckAPIAccessRequest) returns (CheckAPIAccessResponse) {
    option (google.api.http) = {
      post: "/v1/access/api"
      body: "*"
    };
  }

  rpc CheckCMSAccess(CheckCMSAccessRequest) returns (CheckCMSAccessResponse) {
    option (google.api.http) = {
      post: "/v1/access/cms"
      body: "*"
    };
  }

  rpc EnforcePolicy(EnforcePolicyRequest) returns (EnforcePolicyResponse) {
    option (google.api.http) = {
      post: "/v1/policies/enforce"
      body: "*"
    };
  }
  
  // CMS Role Management - Quản lý vai trò CMS
  rpc CreateCMSRole(CreateCMSRoleRequest) returns (CreateCMSRoleResponse) {
    option (google.api.http) = {
      post: "/v1/cms/roles"
      body: "*"
    };
  }

  rpc AssignCMSRole(AssignCMSRoleRequest) returns (AssignCMSRoleResponse) {
    option (google.api.http) = {
      post: "/v1/cms/roles/assign"
      body: "*"
    };
  }

  rpc RemoveCMSRole(RemoveCMSRoleRequest) returns (RemoveCMSRoleResponse) {
    option (google.api.http) = {
      post: "/v1/cms/roles/remove"
      body: "*"
    };
  }

  rpc GetUserCMSTabs(GetUserCMSTabsRequest) returns (GetUserCMSTabsResponse) {
    option (google.api.http) = {
      get: "/v1/cms/users/{user_id}/tabs"
    };
  }

  rpc ListCMSRoles(ListCMSRolesRequest) returns (ListCMSRolesResponse) {
    option (google.api.http) = {
      get: "/v1/cms/roles"
    };
  }
  
  // API Resource Management - Quản lý tài nguyên API
  rpc CreateAPIResource(CreateAPIResourceRequest) returns (CreateAPIResourceResponse) {
    option (google.api.http) = {
      post: "/v1/api/resources"
      body: "*"
    };
  }

  rpc ListAPIResources(ListAPIResourcesRequest) returns (ListAPIResourcesResponse) {
    option (google.api.http) = {
      get: "/v1/api/resources"
    };
  }
}

// ===== Authentication Messages =====

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
}

message RegisterResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string message = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expires_in = 4;
  User user = 5;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expires_in = 4;
}

message LogoutRequest {
  string user_id = 1;
  string token = 2;
}

message LogoutResponse {
  string message = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  string user_id = 2;
  repeated string roles = 3;
  string message = 4;
}

// ===== Authorization Messages =====

message AssignRoleRequest {
  string user_id = 1;
  string role_id = 2;
}

message AssignRoleResponse {
  string message = 1;
}

message RemoveRoleRequest {
  string user_id = 1;
  string role_id = 2;
}

message RemoveRoleResponse {
  string message = 1;
}

message GetUserRolesRequest {
  string user_id = 1;
}

message GetUserRolesResponse {
  repeated Role roles = 1;
}

message CheckPermissionRequest {
  string user_id = 1;
  string resource = 2;
  string action = 3;
}

message CheckPermissionResponse {
  bool allowed = 1;
  string message = 2;
}

// ===== Role Management Messages =====

message CreateRoleRequest {
  string name = 1;
  string description = 2;
  repeated string permission_ids = 3;
}

message CreateRoleResponse {
  string role_id = 1;
  string message = 2;
}

message UpdateRoleRequest {
  string role_id = 1;
  string name = 2;
  string description = 3;
  repeated string permission_ids = 4;
}

message UpdateRoleResponse {
  string message = 1;
}

message DeleteRoleRequest {
  string role_id = 1;
}

message DeleteRoleResponse {
  string message = 1;
}

message GetRoleRequest {
  string role_id = 1;
}

message GetRoleResponse {
  Role role = 1;
}

message ListRolesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListRolesResponse {
  repeated Role roles = 1;
  int32 total = 2;
}

// ===== Permission Management Messages =====

message CreatePermissionRequest {
  string name = 1;
  string resource = 2;
  string action = 3;
  string description = 4;
}

message CreatePermissionResponse {
  string permission_id = 1;
  string message = 2;
}

message DeletePermissionRequest {
  string permission_id = 1;
}

message DeletePermissionResponse {
  string message = 1;
}

message ListPermissionsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListPermissionsResponse {
  repeated Permission permissions = 1;
  int32 total = 2;
}

// ===== Domain Models =====

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  bool is_active = 5;
  string created_at = 6;
  string updated_at = 7;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated Permission permissions = 4;
  string created_at = 5;
  string updated_at = 6;
}

message Permission {
  string id = 1;
  string name = 2;
  string resource = 3;
  string action = 4;
  string description = 5;
  string created_at = 6;
  string updated_at = 7;
}

// ===== Casbin Authorization Messages =====

message CheckAPIAccessRequest {
  string user_id = 1;
  string api_path = 2;
  string method = 3;
}

message CheckAPIAccessResponse {
  bool allowed = 1;
  string message = 2;
}

message CheckCMSAccessRequest {
  string user_id = 1;
  string cms_tab = 2;
  string action = 3;
}

message CheckCMSAccessResponse {
  bool allowed = 1;
  string message = 2;
  repeated string accessible_tabs = 3;
}

message EnforcePolicyRequest {
  string user_id = 1;
  string domain = 2;
  string resource = 3;
  string action = 4;
}

message EnforcePolicyResponse {
  bool allowed = 1;
  string reason = 2;
}

// ===== CMS Role Management Messages =====

message CreateCMSRoleRequest {
  string name = 1;
  string description = 2;
  repeated string tabs = 3;
}

message CreateCMSRoleResponse {
  string cms_role_id = 1;
  string message = 2;
}

message AssignCMSRoleRequest {
  string user_id = 1;
  string cms_role_id = 2;
}

message AssignCMSRoleResponse {
  string message = 1;
}

message RemoveCMSRoleRequest {
  string user_id = 1;
  string cms_role_id = 2;
}

message RemoveCMSRoleResponse {
  string message = 1;
}

message GetUserCMSTabsRequest {
  string user_id = 1;
}

message GetUserCMSTabsResponse {
  repeated string tabs = 1;
  repeated CMSRole roles = 2;
}

message ListCMSRolesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListCMSRolesResponse {
  repeated CMSRole roles = 1;
  int32 total = 2;
}

message CMSRole {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string tabs = 4;
  string created_at = 5;
  string updated_at = 6;
}

// ===== API Resource Management Messages =====

message CreateAPIResourceRequest {
  string path = 1;
  string method = 2;
  string service = 3;
  string description = 4;
}

message CreateAPIResourceResponse {
  string api_resource_id = 1;
  string message = 2;
}

message ListAPIResourcesRequest {
  string service = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListAPIResourcesResponse {
  repeated APIResource resources = 1;
  int32 total = 2;
}

message APIResource {
  string id = 1;
  string path = 2;
  string method = 3;
  string service = 4;
  string description = 5;
  string created_at = 6;
  string updated_at = 7;
}

